2007-03-26  Naba Kumar  <naba.kumar@gnome.org>
	
	* AUTHORS, NEWS, TODO.tasks: Updated.
	
	* plugins/project-manager/plugin.c: (update_ui): Do not insensitise
	close menuitem.
	
	* plugins/symbol-browser/plugin.c: (on_editor_saved),
	(update_editor_symbol_model), (iter_matches),
	(on_editor_update_ui), (value_added_current_editor),
	(activate_plugin), (dispose),
	(symbol_browser_plugin_instance_init):
	* plugins/symbol-browser/plugin.h: update line on editor save
	and editor change. Code clean up and fixed warnings.

2007-03-26  Naba Kumar  <naba.kumar@gnome.org>

	* plugins/project-wizard/templates/java/project.anjuta,
	plugins/project-wizard/templates/python/project.anjuta,
	plugins/project-wizard/templates/python/project.anjuta:
	Removed version control plugins from default selection.

	* plugins/tools/scripts/prepare-changelog.pl,
	plugins/tools/scripts/tools-2.xml.in: Updated prepare changelog
	script to a better one (that works on both cvs and svn).

2007-03-26  Naba Kumar  <naba@gnome.org>

	* (added) plugins/project-wizard/templates/translatable-strings.pl,
	Makefile.am: Added the generated translatable file (required for
	translations for svn checkouts).

	* (added)
	plugins/project-wizard/templates/extract-translatable-strings.pl
	plugins/project-wizard/templates/Makefile.am, Makefile.am,
	po/POTFILES.in: Generated translatable strings for .wiz files and
	added them in POTFILES.in for translation. Fixes bug #398035

2007-03-25  Naba Kumar  <naba@gnome.org>

	* plugins/language-support-cpp-java/plugin.c: Fixed modeline parsing.
	
	* src/anjuta-app.c: Removed dead codes.
	
	* plugins/symbol-browser/an_symbol_prefs.c: Show message view when
	global tags generation starts.
	
	* plugins/debug-manager/chunk_view.c,
	plugins/debug-manager/start.h,
	plugins/debug-manager/chunk_view.h,
	plugins/debug-manager/utilities.c,
	plugins/debug-manager/utilities.h,
	plugins/debug-manager/debugger.c,
	plugins/debug-manager/threads.c,
	plugins/debug-manager/disassemble.c,