@@ -24,7 +24,7 @@ GOBJECT_REQUIRED=2.8.0
 GMODULE_REQUIRED=2.8.0
 GTHREAD_REQUIRED=2.8.0
 GDK_PIXBUF_REQUIRED=2.0.0
-GTK_REQUIRED=2.10.0
+GTK_REQUIRED=2.8.0
 ORBIT_REQUIRED=2.6.0
 LIBGLADE_REQUIRED=2.3.0
 GNOME_REQUIRED=2.12.0
