@@ -1,3 +1,9 @@
+2007-03-27  Naba Kumar  <naba.kumar@gnome.org>
+	
+	* configure.in, plugins/document-manager/anjuta-docman.c:
+	(anjuta_docman_add_editor): Conditionally compile notebook tab
+	reordering feature for gtk > 2.10. Reduced dependency on gtk to 2.8.0
+
 2007-03-26  Naba Kumar  <naba.kumar@gnome.org>
 	
 	* AUTHORS, NEWS, TODO.tasks: Updated.
